--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -7,16 +7,22 @@
     <% end %>
   </ul>
   <% end %>
-  
-<%= form_with model: @book, url: update_book_path(@book.id), method: :patch do |f| %> 
-  
+
+
+<%= form_with model: @book, url: book_path(@book), method: :patch do |f| %>
   <p>Title</p>
   <%= f.text_field :title %>
-  
+
   <p>Body</p>
   <%= f.text_area :body %>
-  
+
   <%= f.submit 'Update Book' %>
-<% end %>
+
+<% end %>  
+
+  <%= link_to "Show", book_path(@book.id) %>
+  <%= link_to 'Back', '/books' %>
+
+
 
 <!--editを押した後の編集画面-->
