--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,50 +1,66 @@
-<h1>Books</h1> 
+<h1>Books</h1>
+
 <table>
+<tr>
+  <th>
+　  Title
+　</th>
+
+　<th>
+　  Body
+　</th>
+</tr>
+
 <% @books.each do |book| %>
 
-<tr>    
-　<th>Title</th> 
-　<sapn><%= book.title %></span>
-　<th>Body</th>
-　<span><%= book.body %></span>
-</tr> 
-<% end %>
+<tr>
+　<td>
+　  <%= book.title %>
+　</td>
 
-<tr>    
-<td>
-  <%= link_to "Show", show_book_path(@books.id) %>
-</td>
-<td>
-  <%= link_to "Edit", edit_book_path(@books.id) %>
-</td>
-<td>
-  <%= link_to "Destroy", destroy_book_path(@books.id), method: :delete, "data-confirm" => "Are you sure?" %>
-</td>
+　<td>
+　  <%= book.body %>
+　</td>
+
+　<td>
+  <%= link_to "Show", book_path(book.id) %>
+　</td>
+
+　<td>
+  <%= link_to "Edit", edit_book_path(book.id) %>
+　</td>
+
+　<td>
+  <%= link_to "Destroy", book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %>
+　</td>
 </tr>
-<% end %>　
+
+<% end %>
 </table>
-    
+
 <h1>New book</h1>
 <% if @book.errors.any? %>
   <%= @book.errors.count %>errors prohibited this book from being saved:
+
   <ul>
     <% @book.errors.full_messages.each do |message| %>
     <li><%= message %></li>
     <% end %>
   </ul>
-  <% end %>
-  
-<%= form_with model: @books, url: '/books', method: :post do |f| %>
 
-  <h4>Title</h4>
+  <% end %>
+
+<%= form_with model: @book, url: '/books', method: :post do |f| %>
+
+  <p>Title</p>
   <%= f.text_field :title %>
-  
-  <h4>Body</h4>
+
+  <p>Body</p>
   <%= f.text_area :body %>
-  
-  <%= f.submit 'Create Book' %>
+
+  <div><%= f.submit 'Create Book' %></div>
 <% end %>
-    
+
 <!--startクリック後の一覧および投稿画面-->
 
 
