--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,9 +1,10 @@
 
-<p>Title:</p>
+<h4>Title:</h4>
 <p><%= @book.title %></p>
-<p>Body:</p>
+<h4>Body:</h4>
 <p><%= @book.body %></p>
 
 <%= link_to "Edit", edit_book_path(@book.id) %>
+<%= link_to 'Back', '/books' %>
 
 <!--詳細画面-->
